# realtime-tracker

./: .gitignore  .pre-commit-config.yaml  Makefile  NOTES.md  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
src/tracker/: config.py  logger.py
src/tracker/capture/: camera.py
src/tracker/processing/: color.py  edges.py  filters.py
tests/unit/: test_camera.py  test_color.py  test_config.py  test_edges.py  test_filters.py  test_logger.py  test_tooling.py
