[build-system]
requires = ["setuptools>=70.2.0,<82"]
build-backend = "setuptools.build_meta"

# ─────────────────────────────────────────
# Project metadata
# ─────────────────────────────────────────
[project]
name = "realtime-tracker"
version = "0.1.0"
description = "Real-time object tracking: YOLO + SORT + FastAPI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

# Core runtime dependencies
# NOTE: torch/torchvision are NOT listed here
# Reason: they require special CUDA index URLs and must be installed
# manually. See NOTES.md for exact install command.
dependencies = [
    "opencv-python-headless>=4.13.0",
    "numpy>=2.4.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
]

# Optional dependency groups
# Install with: pip install -e ".[dev]"
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]
api = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
]

# ─────────────────────────────────────────
# Tool configurations — all in one place
# ─────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing -v"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort (import ordering)
    "N",   # pep8 naming conventions
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade (modern Python syntax)
]
ignore = ["E501"]  # line too long — black handles this

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*", "notebooks/*"]
